# csv-mcp-analyzer

./: .env.example  .gitignore  README.md  generate_oauth_token.py  main.py  pyproject.toml  test_data.csv
client/: app.py
generate_token/: generate_oauth_token.py
mcp_csv_analyzer/: __init__.py  server.py
scripts/: __init__.py  run_client.py  run_mcp.py  run_server.py  run_token_generator.py
