[project]
name = "mcp-csv-analyzer"
version = "0.1.0"
description = "An MCP server for CSV analysis with LLM-generated code execution"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.scripts]
mcp-csv-analyzer = "mcp_csv_analyzer.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]
